initial liquid navbar changes

--- a/sections/homepage.liquid
+++ b/sections/homepage.liquid
@@ -1,5 +1,4 @@
-<div class="homepage">
-  <img src="https://weeklyhow.com/wp-content/uploads/2020/11/WeeklyHow-Logo-With-Text-Bottom.png" class="logo">
+<div class="homepage flex justify-center">
   <h1>Welcome to Shopify Theme Development course!</h1>
   <p>{% render 'homepage-text' %}</p>
 
